# sammoo

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  lpg_profile.csv  pyproject.toml  thermal_load_profile.py
Classes/: config_selection.py  parmoo_simulation.py  thermal_load_profile.py
Examples/: lpg_usage.py  multiobj_row_distance_opt.py  opt1_single_objective_comparison.py  opt2_design_point_multiobj.py  opt3_multiobj_row_distance.py  opt3_subsystem_azimuth.py  opt4_operation_tank_temperatures.py  opt4_startup_shutdown.py  opt_layout.py  opt_startup_shutdown.py  optimize_design_point_multiobj.py  parMOOtest.py  parabolicIPHcommercial_owner.py  single_objective_comparison.py  test_utility_module.py
JSON SAM Templates/Commercial_owner/: untitled_trough_physical_iph.json
sam-model-optim/: config_selection.py  parmoo_simulation.py
sammoo/: __init__.py  config_selection.py  parmoo_simulation.py  version.py
sammoo/components/: __init__.py  solar_loop_configuration.py  thermal_load_lpg.py  weather_design_point.py
sammoo/profiles/: thermal_load_lpg.py  thermal_load_profile.py
sammoo/resources/collector_data/: iph_collectors_parameters.csv
sammoo/resources/solar_resource/: seville_spain_37.377N_-5.926W_hourly.csv
sammoo/templates/Commercial_owner/: untitled_utilityrate5.json
sammoo/templates/iph_parabolic_commercial_owner/: default_trough_physical_iph.json  untitled_cashloan_heat.json  untitled_trough_physical_iph.json
templates/Commercial_owner/: untitled_thermalrate_iph.json
tests/: AbsoliconIAM.py  lpg_usage.py  tes_timeseries_siph.py
