[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sammoo"
version = "1.0.0"
description = "Python-based framework for multi-objective optimization of renewable energy systems using NREL's System Advisor Model (SAM)"
authors = [
    { name="Pedro Padilla Quesada", email="pedro_padilla_q@hotmail.com" }
]
license = {text = "BSD-3-Clause"}

dependencies = [
    "numpy",
    "PySAM",
    "parmoo",
    "matplotlib"
]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["sammoo"]
include-package-data = true
